[gd_scene load_steps=2 format=2]

[ext_resource path="res://modules/UI/SparePart/ScaffoldContainer.gd" type="Script" id=1]

[node name="ScaffoldContainer" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CurrentScaffold" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="NextScaffold" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="aTween" type="Tween" parent="."]

[node name="bTween" type="Tween" parent="."]

[node name="aTwoop" type="Tween" parent="."]

[node name="bTwoop" type="Tween" parent="."]
